--- a/index.html
+++ b/index.html
@@ -1,12 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>E-School</title>
+    <link rel="shortcut icon" href="img/ICON/Students.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <section class="home">
+        <section class="container">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="img/ICON/Logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">
+                                    <h5>Books</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <h5>Cources</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <h5>Others</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <h5>Blog</h5>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="nav-link"><button class="signin-btn">
+                                        <h5>Sign In</h5>
+                                    </button></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
+
+        <section class="container padd home-col">
+            <div class="row d-flex align-items-center">
+                <div class="col-md-4 ">
+                    <h6 id="red-col">Are you ready to Learn?</h6>
+                    <h1>Learn With fun on <span id="grn-col">any schedule</span></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit facilisis quam netus.</p>
+                    <button class="signin-btn">
+                        <h5>Get Started</h5>
+                    </button>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-7">
+                    <img src="img/Photos/Illustration.png" alt="">
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <section class="container padd">
+        <div class="row">
+            <div class="col-md-3 ad d-flex align-items-center justify-content-center">
+                <div class="d-flex flex-column align-items-center">
+                    <img id="ad1" src="img/ICON/book1.png" alt=""><br>
+                    <h5>1500+ Topic</h5>
+                    <p>Learn Anythings</p>
+                </div>
+            </div>
+            <div class="col-md-3 ad d-flex align-items-center justify-content-center">
+                <div class="d-flex flex-column align-items-center">
+                    <img id="ad2" src="img/ICON/Student.png" alt=""><br>
+                    <h5>1800+ Students</h5>
+                    <p>Learn Anythings</p>
+                </div>
+            </div>
+            <div class="col-md-3 ad d-flex align-items-center justify-content-center">
+                <div class="d-flex flex-column align-items-center">
+                    <img id="ad3" src="img/ICON/Test.png" alt=""><br>
+                    <h5>9K+ Test Token</h5>
+                    <p>Learn Anythings</p>
+                </div>
+            </div>
+            <div class="col-md-3 ad d-flex align-items-center justify-content-center">
+                <div class="d-flex flex-column align-items-center">
+                    <img id="ad4" src="img/ICON/Students.png" alt=""><br>
+                    <h5>2000+ Student</h5>
+                    <p>Learn Anythings</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container padd1">
+        <h2>Online Cources</h2><br>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <div class="pic d-flex justify-content-center"><img src="img/Photos/Morder pyschology.png" class="card-img-top" alt="..."></div>
+                <div class="card-body">
+                  <h4 class="card-title">Modern Pyschology</h4>
+                  <h5>Designation</h5><br>
+                  <button class="signin-btn"><h6>Buy Course</h6></button>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <div class="date d-flex justify-content-center">
+                        <img src="img/ICON/calendar.png" alt="">
+                        <h6>Start 20 April 2021</h6>
+                    </div>
+                    <div class="seats d-flex justify-content-center">
+                        <img src="img/ICON/people.png" alt="">
+                        <h6>60 Seats</h6>
+                    </div>
+                  </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <div class="pic d-flex justify-content-center"><img src="img/Photos/Morder psyc.png" class="card-img-top" alt="..."></div>
+                <div class="card-body">
+                    <h4 class="card-title">Modern Pyschology</h4>
+                    <h5>Designation</h5><br>
+                    <button class="signin-btn"><h6>Buy Course</h6></button>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <div class="date d-flex justify-content-center">
+                        <img src="img/ICON/calendar.png" alt="">
+                        <h6>Start 20 April 2021</h6>
+                    </div>
+                    <div class="seats d-flex justify-content-center">
+                        <img src="img/ICON/people.png" alt="">
+                        <h6>60 Seats</h6>
+                    </div>
+                  </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <div class="d-flex justify-content-center pic"><img src="img/Photos/Morder pychons.png" class="card-img-top" alt="..."></div>
+                <div class="card-body">
+                    <h4 class="card-title">Modern Pyschology</h4>
+                    <h5>Designation</h5><br>
+                    <button class="signin-btn"><h6>Buy Course</h6></button>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                  <div class="date d-flex justify-content-center">
+                      <img src="img/ICON/calendar.png" alt="">
+                      <h6>Start 20 April 2021</h6>
+                  </div>
+                  <div class="seats d-flex justify-content-center">
+                      <img src="img/ICON/people.png" alt="">
+                      <h6>60 Seats</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+
+    <section class="container padd1">
+        <h2>Testimonial</h2><br>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-2"><img src="img/Photos/Man.png" alt=""></div>
+            <div class="col-md-6 d-flex align-items-center">
+                <h6>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</h6>
+            </div>
+        </div>
+    </section>
+<section class="padd2">
+    <section class="container">
+        <div class="row">
+            <div class="col-md-4 foot-1">
+                <h6>Millions of people of all ages and from around the world are improving their lives with us</h6>
+            </div>
+            <div class="col-md-2 foot-2">
+                <h5>Course</h5>
+                <h6>Graphic Design</h6>
+                <h6>Web Design</h6>
+                <h6>Business</h6>
+                <h6>Marketing</h6>
+                <h6>Engineering</h6>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-2 foot-2">
+                <h5>Terms</h5>
+                <h6>Graphic Design</h6>
+                <h6>Web Design</h6>
+                <h6>Business</h6>
+                <h6>Marketing</h6>
+                <h6>Engineering</h6>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-2 foot-2">
+                <h5>Userful Link</h5>
+                <h6>Graphic Design</h6>
+                <h6>Web Design</h6>
+                <h6>Business</h6>
+                <h6>Marketing</h6>
+                <h6>Engineering</h6>
+            </div>
+        </div>
+        <footer>
+            <br><br>
+            <small>&copy;Copyright 2021, AR Nasim.All right reserved</small>
+        </footer>
+    </section>
+</section>
     
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
