--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">
+                                <a class="nav-link active" aria-current="page" href="#books">
                                     <h5>Books</h5>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="#courses">
                                     <h5>Cources</h5>
                                 </a>
                             </li>
@@ -45,9 +45,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="nav-link"><button class="signin-btn">
-                                        <h5>Sign In</h5>
-                                    </button></a>
+                                <a href="nav-link" class="signin-btn">Sign in</a>
                             </li>
                         </ul>
                     </div>
@@ -61,9 +59,7 @@
                     <h6 id="red-col">Are you ready to Learn?</h6>
                     <h1>Learn With fun on <span id="grn-col">any schedule</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit facilisis quam netus.</p>
-                    <button class="signin-btn">
-                        <h5>Get Started</h5>
-                    </button>
+                    <a href="nav-link" class="signin-btn">Get Started</a>
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-md-7">
@@ -73,40 +69,42 @@
         </section>
     </section>
 
-    <section class="container padd">
-        <div class="row">
-            <div class="col-md-3 ad d-flex align-items-center justify-content-center">
-                <div class="d-flex flex-column align-items-center">
-                    <img id="ad1" src="img/ICON/book1.png" alt=""><br>
-                    <h5>1500+ Topic</h5>
-                    <p>Learn Anythings</p>
+ 
+        <section class="container padd" id="books">
+            <div class="row">
+                <div class="col-md-3 col-12">
+                    <div class="ad p-5">
+                        <img id="ad1" src="img/ICON/book1.png" alt=""><br>
+                        <h5>1500+ Topic</h5>
+                        <p>Learn Anythings</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ad p-5">
+                        <img id="ad2" src="img/ICON/Student.png" alt=""><br>
+                        <h5>1800+ Students</h5>
+                        <p>Learn Anythings</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ad p-5">
+                        <img id="ad3" src="img/ICON/Test.png" alt=""><br>
+                        <h5>9K+ Test Token</h5>
+                        <p>Learn Anythings</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="ad p-5">
+                        <img id="ad4" src="img/ICON/Students.png" alt=""><br>
+                        <h5>2000+ Student</h5>
+                        <p>Learn Anythings</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-3 ad d-flex align-items-center justify-content-center">
-                <div class="d-flex flex-column align-items-center">
-                    <img id="ad2" src="img/ICON/Student.png" alt=""><br>
-                    <h5>1800+ Students</h5>
-                    <p>Learn Anythings</p>
-                </div>
-            </div>
-            <div class="col-md-3 ad d-flex align-items-center justify-content-center">
-                <div class="d-flex flex-column align-items-center">
-                    <img id="ad3" src="img/ICON/Test.png" alt=""><br>
-                    <h5>9K+ Test Token</h5>
-                    <p>Learn Anythings</p>
-                </div>
-            </div>
-            <div class="col-md-3 ad d-flex align-items-center justify-content-center">
-                <div class="d-flex flex-column align-items-center">
-                    <img id="ad4" src="img/ICON/Students.png" alt=""><br>
-                    <h5>2000+ Student</h5>
-                    <p>Learn Anythings</p>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+  
 
-    <section class="container padd1">
+    <section class="container padd1" id="courses">
         <h2>Online Cources</h2><br>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -115,7 +113,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Modern Pyschology</h4>
                   <h5>Designation</h5><br>
-                  <button class="signin-btn"><h6>Buy Course</h6></button>
+                  <a href="nav-link" class="signin-btn">Buy Course</a>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
                     <div class="date d-flex justify-content-center">
@@ -135,7 +133,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Modern Pyschology</h4>
                     <h5>Designation</h5><br>
-                    <button class="signin-btn"><h6>Buy Course</h6></button>
+                    <a href="nav-link" class="signin-btn">Buy Course</a>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
                     <div class="date d-flex justify-content-center">
@@ -155,7 +153,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Modern Pyschology</h4>
                     <h5>Designation</h5><br>
-                    <button class="signin-btn"><h6>Buy Course</h6></button>
+                    <a href="nav-link" class="signin-btn">Buy Course</a>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
                   <div class="date d-flex justify-content-center">
@@ -185,34 +183,37 @@
 <section class="padd2">
     <section class="container">
         <div class="row">
-            <div class="col-md-4 foot-1">
-                <h6>Millions of people of all ages and from around the world are improving their lives with us</h6>
+            <div class="col-md-4 col-12 foot-1">
+                <h6>Millions of people of all ages and from around the world are improving their lives with us</h6><br>
             </div>
-            <div class="col-md-2 foot-2">
+            <div class="col-md-2 col-12 foot-2">
                 <h5>Course</h5>
                 <h6>Graphic Design</h6>
                 <h6>Web Design</h6>
                 <h6>Business</h6>
                 <h6>Marketing</h6>
                 <h6>Engineering</h6>
+                <br>
             </div>
             <div class="col-md-1"></div>
-            <div class="col-md-2 foot-2">
+            <div class="col-md-2 col-12 foot-2">
                 <h5>Terms</h5>
                 <h6>Graphic Design</h6>
                 <h6>Web Design</h6>
                 <h6>Business</h6>
                 <h6>Marketing</h6>
                 <h6>Engineering</h6>
+                <br>
             </div>
             <div class="col-md-1"></div>
-            <div class="col-md-2 foot-2">
+            <div class="col-md-2 col-12 foot-2">
                 <h5>Userful Link</h5>
                 <h6>Graphic Design</h6>
                 <h6>Web Design</h6>
                 <h6>Business</h6>
                 <h6>Marketing</h6>
                 <h6>Engineering</h6>
+                <br>
             </div>
         </div>
         <footer>
